This is branch changes

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>Hello Git</h1>
         <p>This files are testing to learn Git</p>
         Yo everyone here
+        This is Git branches
     </body>
 </html>
