--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <p>This files are testing to learn Git</p>
         Yo everyone here
         This is Git branches
+        And now we merged the 2 files
     </body>
 </html>
